...
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.app.volu.ui.authentication.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/navigate_to_event_category"
            app:destination="@id/eventCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventCategoryFragment"
        android:name="com.app.volu.ui.eventscategory.EventCategoryFragment"
...
