...
                android:padding="8dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sex_container"
            style="@style/Widget.Volu.TextInputLayout.FilledBox.ExposedDropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/default_margin"
...
